--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-fontawesome": "^1.7.1"
+    "react-fontawesome": "^1.7.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
