--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "gray-matter": "^4.0.3",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-fontawesome": "^1.7.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
