--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "gray-matter": "^4.0.3",
+    "marked": "^15.0.6",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
