feat: add proper blog formatting

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "dom-parser": "^1.1.5",
+    "domparser": "^0.1.1",
     "gray-matter": "^4.0.3",
+    "jsdom": "^26.0.0",
     "marked": "^15.0.6",
     "next": "^14.2.15",
     "react": "^18",
